--- a/css/font.css
+++ b/css/font.css
@@ -1,12 +1,12 @@
 
 /* Default font for body */
 body {
-    font-family: "Lora", serif !important;
+    font-family: "Alata", serif !important;
 }
 
 /* secondary font */
 .secondary-font, #secondary-font {
-    font-family: "Lora", serif;
+    font-family: "Alata", serif;
 }
 
 /* primary font */
